--- a/IoT-project/物联网设备固件分析指南.md
+++ b/IoT-project/物联网设备固件分析指南.md
@@ -154,25 +154,73 @@ HIKVISION CHINA B.V 提供的固件
 
 
 
- 
+ 中间人攻击（Man-in-the-Middle Attack，简称MitM攻击）是一种网络安全攻击，其中攻击者插入自己在两个通信方之间，窃取或篡改他们之间的数据传输。这种攻击可以发生在各种通信渠道中，包括互联网连接、局域网、Wi-Fi网络等。
 
+以大疆无人机Mavic 3设备固件升级为例：
 
+在升级 Mavic 3 Classic 时，拦截通信并分析用于下载新固件包的 API 端点（绕过证书锁定）。调查显示，该无人机有多个组件，每个组件都有其独特的固件映像，由模块 ID 识别并单独下载。这个过程是通过向mydjiflight.dji.com主机上的端点/getfile/downpath发出经过身份验证的HTTP REST请求（每个固件模块一个）来完成的。
 
+![img](images/Firmware-download-HTTP-request.png)
 
+除了下载固件映像所需的信息（如模块ID、产品ID和版本）外，POST请求还包含一个签名，用于对请求本身进行身份验证。响应包含一个链接，其中包含下载固件映像时所需的相关身份验证密钥auth_key，如图6所示。只需使用提供的链接和身份验证密钥作为参数执行wget工具就足以下载固件。
 
+![img](images/Firmware-downloads-with-wget.png)
 
-
-
-
-
-
-
-
-
+对于 Mavic 3 Classic，可用列表中最有趣的升级包是关联 ID 0802 的模块，因为其尺寸较大，这表明它可能包含无人机的主操作系统。
 
 ### 1.3 通过设备调试接口中提取
 
----
+标准的调试接口通常是用于连接到计算机或其他调试设备的接口，以便开发人员可以进行调试、编程和分析。这些接口可以用于访问和操纵硬件或软件，以帮助诊断问题、改进性能或进行逆向工程。以下是一些常见的标准调试接口：
+
+| 调试接口 |                           描述信息                           |
+| :------: | :----------------------------------------------------------: |
+|   UART   | UART是一种串行通信接口，通常用于与嵌入式系统通信。它可以通过串口连接（通常是RS-232或RS-485）与设备通信，使开发人员能够查看和修改设备的输出和输入。 |
+|   JTAG   | JTAG是一种用于测试、调试和编程集成电路的标准接口。它提供了一种途径，允许开发人员访问芯片内部的各种信号和寄存器，用于调试和编程目的。 |
+|   SWD    | SWD是一种用于低功耗微控制器调试的串行接口，通常用于ARM Cortex-M微控制器。它提供了访问设备内部的调试信号、寄存器和存储器。 |
+|   SPI    | SPI是一种串行通信接口，通常用于连接微控制器、传感器和外围设备。虽然它通常用于通信，但它也可以用于调试目的，通过读取和写入寄存器来监视设备状态。 |
+|   I2C    | I2C是一种串行通信协议，通常用于连接微控制器、传感器和其他集成电路。类似于SPI，I2C也可以用于调试目的。 |
+|   ICE    | ICE是一种用于嵌入式系统调试的硬件设备，通常使用专用接口与目标设备连接，允许开发人员在目标设备中单步执行代码和监视状态。 |
+
+这里以seebug中分析Tenda Ax12 设备的文章作为参考。通过串口调试(UART)的方式从设备在获取固件。
+
+要的工具有FT232，杜邦线，万用表，SecureCRT软件。
+
+![img](images/tools.png)
+
+FT232 USB转UART串口模块。
+
+![img](images/usb2uart.png)
+
+UART引脚作用
+
+- VCC：供电pin，一般是3.3v-5v，正极
+- GND：接地，负极
+- RXD：接收数据引脚
+- TXD：发送数据引脚
+
+现在我们就知道了电路板上GND就是GND，IN就是RXD，OUT就是TXD，3V3就是VCC。但是连接杜邦线的时候需要这样连接，一般来说连GND，RXD，TXD就可以了。
+
+- FT232上的TXD连接到电路板的RXD(IN)
+- FT232上的RXD连接到电路板的TXD(OUT)
+- FT232上的GND连接到电路板的GND
+
+![img](images/already-connect.png)
+
+然后打开SecureCRT，设置好波特率115200（常用）
+
+![img](images/SecureCRT.png)
+
+然后重启路由器，就可以看到在打印启动日志了。
+
+![img](images/reboot-router.png)
+
+然后等待一段时间，就会出现登录了
+
+![login-to-shell](images/login-to-shell.png)
+
+
+
+
 
 
 
