--- a/IoT-project/物联网设备固件分析指南.md
+++ b/IoT-project/物联网设备固件分析指南.md
@@ -6,7 +6,7 @@
 
 感谢以下各位师傅的辛勤付出，大家在阅读文章和学习的过程中遇到不妥当分析和描述，亦或者需要帮助的地方可直接通过邮箱联系各位师傅，同样也欢迎各位师傅的加入。
 
-:handshake: Arrebol [中科院软件所 南京软件技术研究院] :e-mail:caojun@nj.iscas.ac.cn 
+:handshake: Arrebol [中科院软件所 南京软件技术研究院] :e-mail:caojun@njis.ac.cn 
 
 :handshake:gxh191[二进制安全爱好者]:e-mail: guoxuehhh@gmail.com
 
@@ -270,7 +270,7 @@ UART引脚作用
 
 一些固件爱好者可以会收集各种厂商的固件，放到网上出售。一个固件一般几元到几十元不等。如：https://www.qyyd5g.top/ 联系到卖家，提出想要的固件型号，可以询问到价格，付款购买即可。
 
-![image-20231022214355009](C:/Users/火烧云/AppData/Roaming/Typora/typora-user-images/image-20231022214355009.png)
+![buy-firmwares](images/buy-firmwares.png)
 
 向客服索取
 
@@ -385,9 +385,7 @@ cd firmware-mod-kit/src
 
 静态分析文件系统
 
-在固件分析中，常常遇到各种文件系统，如 Squashfs、Cramfs、YAFFS2、UBIFS、EXT4
-
-常见的 squashfs-root 文件系统通常可以将整个文件系统或者某个单一的目录压缩在一起, 存放在某个设备, 某个分区或者普通的文件中
+在固件分析中，常常遇到各种文件系统，如 Squashfs、Cramfs、YAFFS2、UBIFS、EXT4等，常见的 squashfs-root 文件系统通常可以将整个文件系统或者某个单一的目录压缩在一起, 存放在某个设备, 某个分区或者普通的文件中
 
 以思科路由器的这个文件系统为例
 
@@ -486,12 +484,11 @@ ignore-sigpipe = true
 
 #### 2.2.2 工具分析
 
-借助一些自动化的工具对固件的文件系统进行分析
+借助一些自动化的工具对固件的文件系统进行分析，以识别潜在的安全漏洞、后门或恶意代码。
 
 [firmwalker](https://github.com/craigz28/firmwalker)
 
-这是一个简单的 bash 脚本，用于搜索提取或安装的固件文件系统
-是动态分析的一种工具，它将在提取或安装的固件文件系统中搜索感兴趣的内容，例如：
+Firmwalker 是一个用于扫描固件文件系统的简单脚本。它搜索敏感信息，如硬编码的密码、私钥、证书等，并检查潜在的安全问题。它将在提取或安装的固件文件系统中搜索感兴趣的内容，例如：
 
 - etc/shadow 和 etc/passwd
 - 列出 etc/ssl 目录
@@ -1416,11 +1413,21 @@ images 下多出的 targz
 
 
 
+shambles
+
+
+
 [Podding](https://podding.cn/#/login)
 
 
 
 ## 5. 漏洞分析与利用
+
+
+
+
+
+
 
 
 
@@ -1438,7 +1445,7 @@ images 下多出的 targz
 
 针对硬件的分析主要停留在电路板上使用的芯片以及配套的解决方案，一般重点关注MCU型号以及外挂Flash闪存。其次便是寻找各类接口，如UART、ADB、JTAG等。
 
-
+![image-20231126160859616](images/Debug_Interface.png)
 
 对于UART口一般可以直接找并排或相距不远的多个焊点和通孔，然后借助万用表来识别每个串口对应的功能。也可以直接使用JTAGulator来直接进行识别，当然他更强大的功能是识别JTAG接口。
 
@@ -1452,7 +1459,7 @@ images 下多出的 targz
 
 过第一步说的接口进入shell后可以用ps查看设备开启了哪些服务，这些服务都是后期重点的挖掘方向。其次便是分析固件文件系统，查看固件使用了哪些中间件，如果有中间件，查看中间件的配置文件，获取中间件配置信息，当没思路的时候可以查看中间件是否有漏洞，中间件有漏洞就可以打开一扇窗口了。
 
-
+![image-20231126161244403](images/mediaserver.png)
 
 设备固件中往往会包含大量敏感信息，如设备账号密码等信息。对于提取固件内配置文件中的敏感信息，我们可以通过firmwalker.sh脚本自动化获取。
 
@@ -1464,7 +1471,7 @@ images 下多出的 targz
 
 另外一些厂商为方便调试会特意在设备固件上留有后门，通过逆向等技术手段，找出不属于正常功能且可能存在安全问题的接口。利用后门漏洞可以直接控制硬件设备，进一步发起信息窃取、网络钓鱼、DNS劫持等攻击行为，直接威胁用户网上交易和数据存储的安全。
 
-
+![图 5：显示固件中的硬编码后门](images/backdoor.png)
 
 搜索危险函数: system,popen,strcpy,snprintf,printf等，查看危险函数变量是否可控，可控可能就有漏洞。通过IDA跟踪请求url处理函数，跟踪每个变量处理过程，查看是否对变量进行过滤处理，无长度限制可尝试栈溢出、堆溢出，对特殊符号进行尝试绕过等操作来寻找进一步的漏洞。
 
@@ -1476,9 +1483,9 @@ images 下多出的 targz
 
 这里拿HG532系列路由器远程命令执行举例，该函数对变量没有过滤，直接使用system，导致出现远程命令注入漏洞。
 
+![image-20231126160000875](images/HG532_upnp.png)
 
-
-当然除了传统的各类网络协议，物联网设备也会存在例如蓝牙、射频信号等攻击面
+当然除了传统的各类网络协议，物联网设备也会存在例如蓝牙、射频信号等攻击面。
 
 
 
@@ -1746,9 +1753,20 @@ https://atcnetz.blogspot.com/
 
 
 
-比较前沿的物联网安全的研究性文章
+物联网安全的研究性文章
 
-
+|                             标题                             | 时间 |                             主题                             |
+| :----------------------------------------------------------: | :--: | :----------------------------------------------------------: |
+| IOTGUARD: Dynamic Enforcement of Security andSafety Policy in Commodity IoT | 2019 |                       iot设备交互安全                        |
+| Snipuzz_Black-box_Fuzzing_of_IoT_Firmware_via_Message_Snippet_Inference | 2021 |                     具有反馈机制黑盒fuzz                     |
+|          基于物联网设备局部仿真的反馈式模糊测试技术          | 2023 |                      反馈式模糊测试技术                      |
+| IOTSAFE_Enforcing_Safety_and_Security_Policy_withReal_IoT_Physical_Interaction_Discovery | 2021 |                       iot物理交互安全                        |
+|          Policy-Guided Fuzzingfor Robotic Vehicles           | 2021 |               遥控无人驾驶设备在策略引导下fuzz               |
+| DIANE: Identifying Fuzzing Triggers in Apps toGenerate Under-constrained Inputs for IoT Devices | 2021 | 通过iot配套应用程序优化黑盒fuzz输入，并解决app中验证码约束问题 |
+| KARONTE: Detecting Insecure Multi-binary Interactions in Embedded Firmware | 2020 |                  多二进制文件自动化静态分析                  |
+|  POSTER_A_Multi-phased_Multi-faceted_IoT_Honeypot_Ecosystem  | 2020 |                      多阶段IOT设备蜜罐                       |
+| Android SmartTVs Vulnerability Discovery via Log-Guided Fuzzing | 2021 |                       漏洞 / 缺陷挖掘                        |
+|                                                              |      |                                                              |
 
 
 
