--- a/GuideTutorial/0-环境配置.md
+++ b/GuideTutorial/0-环境配置.md
@@ -31,6 +31,26 @@
 
 
 
+### attify OS4 虚拟机
+
+最新版本 -AttifyOS 4.0 基于 Ubuntu 22.04，包含预配置工具来帮助您进行下一次 IoT 渗透测试。供安全专业人员评估物联网 (IoT) 设备的安全性。作为新一版本的attifyOS 系统，修改了很多系统原有的内容，AttifyOS 4 还附带了一个包管理器工具。
+
+Attify OS4(虚拟机账户口令`attify`:`attify`)
+
+官方介绍：https://github.com/AttifyOS/AttifyOS/releases
+
+官方下载地址：https://github.com/AttifyOS/AttifyOS
+
+![attify_os4](../images/attify_os4.png)
+
+注意事项：
+
+- 因为github的限制，需要把所有压缩包都下载然后合并（可以使用7zip工具合并）
+- 系统默认是没带浏览器的，需要主动的安装。
+- 细看官方常见问题和解决办法，例如网络配置和页面窗口自动伸缩
+
+
+
 ### IOT-Research虚拟机
 
 [IOT-Research](https://www.iotsec-zone.com/article/110)虚拟机账户口令：`iot`：`iot`
@@ -51,7 +71,6 @@ Mac M1版虚拟机
 其中包含很多已经安装了很多常用的工具，例如binwalk、FirmAE 、flashrom等。
 
 ![iotsec-OS-tools](../images/iotsec-OS-tools.png)
-
 
 
 
