--- a/GuideTutorial/1-获取固件.md
+++ b/GuideTutorial/1-获取固件.md
@@ -1,4 +1,3 @@
-
 ## 1. 获取固件
 
 ### 1.1 从供应商的support网站获取
@@ -23,64 +22,66 @@ HIKVISION CHINA B.V 提供的固件
 
 国内外常见路由器厂商的固件下载链接：
 
-| 厂商           | 下载链接                                                     |
-| -------------- | ------------------------------------------------------------ |
-| D-LINK         | https://tsd.dlink.com.tw/ddwn                                |
-|                | https://files.dlink.com.au/products/                         |
-|                | http://www.dlink.com.cn/techsupport/                         |
-| TOTOLINK       | https://www.totolink.net/home/index/menu_listtpl/listtpl/support/id/27.html |
-| FAST           | https://service.fastcom.com.cn/download-list.html#0          |
-| TP-LINK        | https://resource.tp-link.com.cn/?&productorlist=1&filterClass=[4] |
-| MERCURY        | https://service.mercurycom.com.cn/download-list.html         |
-| TENDA          | https://www.tenda.com.cn/download/cata-11.html               |
-| Trendnet       | https://downloads.trendnet.com/                              |
-| NETCORE(磊科)  | https://www.netcoretec.com/service-support/download          |
-| NETIS          | https://www.netis-systems.com/Suppory/down.html              |
-| UTT(艾泰)      | https://www.utt.com.cn/downloadcenter.php                    |
-| RUIJIE(锐捷)   | https://www.ruijie.com.cn/fw/rj/                             |
-|                | https://www.ruijienetworks.com/resources/products/1896-1897  |
-| WAYOS(维盟)    | https://www.wayos.com/fuwuzhici/xiazaizhongxin/              |
-| ADSLR(飞鱼星)  | https://www.adslr.com/companyfile/2/                         |
-|                | https://www.feiyuxing.com.cn/Downloads/                      |
-| B-LINK         | https://www.b-link.net.cn/downloads_16.html                  |
-| ASUS(华硕)     | https://www.asus.com.cn/support/Download-Center/             |
-| DrayTek        | https://www.draytek.com/support/resources/routers#version    |
-|                | https://fw.draytek.com.tw/                                   |
-| NETGEAR        | http://support.netgear.cn/download.asp                       |
-|                | https://www.cisco.com/c/zh_cn/support/all-products.html      |
-| LB-LINK        | https://www.lb-link.com/support/downloads/                   |
-| MIKROTIK       | https://mikrotik.com/download                                |
-|                | http://46.167.242.10/firmware/mikrotik/                      |
-| IKUAI(爱快)    | https://www.ikuai8.com/component/download                    |
-| FORTINET(飞塔) | https://support.fortinet.com/Download/FirmwareImages.aspx    |
-|                | https://it-help.tips/en/fortigate-firmware-download/         |
-| MI(小米)       | http://www.miwifi.com/miwifi_download.html                   |
-| H3C            | https://www.h3c.com/cn/Service/Document_Software/Software_Download/ |
-| LINKSYS        | https://www.linksys.com/jp/linksys-support/                  |
-| COMFAST        | http://www.comfast.com.cn/index.php?m=content&c=index&a=lists&catid=31 |
-| 360            | https://luyou.360.cn/home/support/download?from=nav          |
-| WAVLINK        | https://www.wavlink.com/zh_cn/firmware.html                  |
-| IP-COM         | https://www.ip-com.com.cn/download/list-5.html               |
-| Advantech      | https://www.advantech.com/en/search/?q=router&st=support&from=support |
-| Zyxel          | https://www.zyxel.com/global/en/support/download             |
-| NetModule      | https://www.netmodule.com/en/support/downloads/device-software-manual |
-| Nexxt          | https://support.nexxtsolutions.com/935819-English            |
-| Teltonika      | https://wiki.teltonika-networks.com/view/RUT_Routers         |
-| Belkin         | https://www.belkin.com/support-search/?search=router         |
-| Engeniustech   | https://www.engeniustech.com/wp_firmware/                    |
-| AmpedWireless  | https://ampedwireless.com/support.html                       |
-| Actiontec      | https://opensource.actiontec.com/                            |
-| Level1         | http://download.level1.com/level1/firmware/                  |
+| 厂商           | 下载链接                                                                     |
+| -------------- | ---------------------------------------------------------------------------- |
+| D-LINK         | https://tsd.dlink.com.tw/ddwn                                                |
+|                | https://files.dlink.com.au/products/                                         |
+|                | http://www.dlink.com.cn/techsupport/                                         |
+| TOTOLINK       | https://www.totolink.net/home/index/menu_listtpl/listtpl/support/id/27.html  |
+| FAST           | https://service.fastcom.com.cn/download-list.html#0                          |
+| TP-LINK        | https://resource.tp-link.com.cn/?&productorlist=1&filterClass=[4]            |
+| MERCURY        | https://service.mercurycom.com.cn/download-list.html                         |
+| TENDA          | https://www.tenda.com.cn/download/cata-11.html                               |
+| Trendnet       | https://downloads.trendnet.com/                                              |
+| NETCORE(磊科)  | https://www.netcoretec.com/service-support/download                          |
+| NETIS          | https://www.netis-systems.com/Suppory/down.html                              |
+| UTT(艾泰)      | https://www.utt.com.cn/downloadcenter.php                                    |
+| RUIJIE(锐捷)   | https://www.ruijie.com.cn/fw/rj/                                             |
+|                | https://www.ruijienetworks.com/resources/products/1896-1897                  |
+| WAYOS(维盟)    | https://www.wayos.com/fuwuzhici/xiazaizhongxin/                              |
+| ADSLR(飞鱼星)  | https://www.adslr.com/companyfile/2/                                         |
+|                | https://www.feiyuxing.com.cn/Downloads/                                      |
+| B-LINK         | https://www.b-link.net.cn/downloads_16.html                                  |
+| ASUS(华硕)     | https://www.asus.com.cn/support/Download-Center/                             |
+| DrayTek        | https://www.draytek.com/support/resources/routers#version                    |
+|                | https://fw.draytek.com.tw/                                                   |
+| NETGEAR        | http://support.netgear.cn/download.asp                                       |
+|                | https://www.cisco.com/c/zh_cn/support/all-products.html                      |
+| LB-LINK        | https://www.lb-link.com/support/downloads/                                   |
+| MIKROTIK       | https://mikrotik.com/download                                                |
+|                | http://46.167.242.10/firmware/mikrotik/                                      |
+| IKUAI(爱快)    | https://www.ikuai8.com/component/download                                    |
+| FORTINET(飞塔) | https://support.fortinet.com/Download/FirmwareImages.aspx                    |
+|                | https://it-help.tips/en/fortigate-firmware-download/                         |
+| MI(小米)       | http://www.miwifi.com/miwifi_download.html                                   |
+| H3C            | https://www.h3c.com/cn/Service/Document_Software/Software_Download/          |
+| LINKSYS        | https://www.linksys.com/jp/linksys-support/                                  |
+| COMFAST        | http://www.comfast.com.cn/index.php?m=content&c=index&a=lists&catid=31       |
+| 360            | https://luyou.360.cn/home/support/download?from=nav                          |
+| WAVLINK        | https://www.wavlink.com/zh_cn/firmware.html                                  |
+| IP-COM         | https://www.ip-com.com.cn/download/list-5.html                               |
+| Advantech      | https://www.advantech.com/en/search/?q=router&st=support&from=support        |
+| Zyxel          | https://www.zyxel.com/global/en/support/download                             |
+| NetModule      | https://www.netmodule.com/en/support/downloads/device-software-manual        |
+| Nexxt          | https://support.nexxtsolutions.com/935819-English                            |
+| Teltonika      | https://wiki.teltonika-networks.com/view/RUT_Routers                         |
+| Belkin         | https://www.belkin.com/support-search/?search=router                         |
+| Engeniustech   | https://www.engeniustech.com/wp_firmware/                                    |
+| AmpedWireless  | https://ampedwireless.com/support.html                                       |
+| Actiontec      | https://opensource.actiontec.com/                                            |
+| Level1         | http://download.level1.com/level1/firmware/                                  |
 | Edimax         | https://www.edimax.com/edimax/download/download/data/edimax/global/download/ |
-| peplink        | https://www.peplink.com/support-01/downloads/                |
-| sierrawireless | https://source.sierrawireless.com/                           |
-|                |                                                              |
+| peplink        | https://www.peplink.com/support-01/downloads/                                |
+| sierrawireless | https://source.sierrawireless.com/                                           |
+| E-lins         | https://www.szelins.com/firmware-t-10.html                                   |
+| gl-inet        | https://dl.gl-inet.com/                                                      |
+| PhoenixContact | https://www.phoenixcontact.com/en-sg/products/industrial-communication       |
+|                |                                                                              |
+|                |                                                                              |
 
 ### 1.2 设备更新进行中间人获取
 
-
-
- 中间人攻击（Man-in-the-Middle Attack，简称MitM攻击）是一种网络安全攻击，其中攻击者插入自己在两个通信方之间，窃取或篡改他们之间的数据传输。这种攻击可以发生在各种通信渠道中，包括互联网连接、局域网、Wi-Fi网络等。
+中间人攻击（Man-in-the-Middle Attack，简称MitM攻击）是一种网络安全攻击，其中攻击者插入自己在两个通信方之间，窃取或篡改他们之间的数据传输。这种攻击可以发生在各种通信渠道中，包括互联网连接、局域网、Wi-Fi网络等。
 
 以大疆无人机Mavic 3设备固件升级为例：
 
@@ -98,14 +99,14 @@ HIKVISION CHINA B.V 提供的固件
 
 标准的调试接口通常是用于连接到计算机或其他调试设备的接口，以便开发人员可以进行调试、编程和分析。这些接口可以用于访问和操纵硬件或软件，以帮助诊断问题、改进性能或进行逆向工程。以下是一些常见的标准调试接口：
 
-| 调试接口 |                           描述信息                           |
-| :------: | :----------------------------------------------------------: |
+| 调试接口 |                                                                      描述信息                                                                      |
+| :------: | :------------------------------------------------------------------------------------------------------------------------------------------------: |
 |   UART   | UART是一种串行通信接口，通常用于与嵌入式系统通信。它可以通过串口连接（通常是RS-232或RS-485）与设备通信，使开发人员能够查看和修改设备的输出和输入。 |
-|   JTAG   | JTAG是一种用于测试、调试和编程集成电路的标准接口。它提供了一种途径，允许开发人员访问芯片内部的各种信号和寄存器，用于调试和编程目的。 |
-|   SWD    | SWD是一种用于低功耗微控制器调试的串行接口，通常用于ARM Cortex-M微控制器。它提供了访问设备内部的调试信号、寄存器和存储器。 |
-|   SPI    | SPI是一种串行通信接口，通常用于连接微控制器、传感器和外围设备。虽然它通常用于通信，但它也可以用于调试目的，通过读取和写入寄存器来监视设备状态。 |
-|   I2C    | I2C是一种串行通信协议，通常用于连接微控制器、传感器和其他集成电路。类似于SPI，I2C也可以用于调试目的。 |
-|   ICE    | ICE是一种用于嵌入式系统调试的硬件设备，通常使用专用接口与目标设备连接，允许开发人员在目标设备中单步执行代码和监视状态。 |
+|   JTAG   |        JTAG是一种用于测试、调试和编程集成电路的标准接口。它提供了一种途径，允许开发人员访问芯片内部的各种信号和寄存器，用于调试和编程目的。        |
+|   SWD   |             SWD是一种用于低功耗微控制器调试的串行接口，通常用于ARM Cortex-M微控制器。它提供了访问设备内部的调试信号、寄存器和存储器。             |
+|   SPI   |  SPI是一种串行通信接口，通常用于连接微控制器、传感器和外围设备。虽然它通常用于通信，但它也可以用于调试目的，通过读取和写入寄存器来监视设备状态。  |
+|   I2C   |                       I2C是一种串行通信协议，通常用于连接微控制器、传感器和其他集成电路。类似于SPI，I2C也可以用于调试目的。                       |
+|   ICE   |              ICE是一种用于嵌入式系统调试的硬件设备，通常使用专用接口与目标设备连接，允许开发人员在目标设备中单步执行代码和监视状态。              |
 
 这里以seebug中分析Tenda Ax12 设备的文章作为参考。通过串口调试(UART)的方式从设备在获取固件。
 
@@ -144,15 +145,9 @@ UART引脚作用
 
 ![login-to-shell](../images/login-to-shell.png)
 
-
-
-
-
-
-
 ### 1.4 从Flash闪存芯片进行提取
 
->  **不拆芯片读取固件**
+> **不拆芯片读取固件**
 
 使用夹子、钩子等连接导线，适合引脚较少的芯片。通过夹具夹住芯片引脚，然后连接编程器读取芯片内容，通过编程器连接芯片需要注意引脚的顺序，在 IC 芯片上都会有一个小点，大多数情况下，小点对应的引脚即为芯片的第一脚，而连接编程器的导线也需要插入编程器上相应的引脚。
 
@@ -168,7 +163,7 @@ UART引脚作用
 
 ![RT809F-readfirmware](../images/RT809F-readfirmware.png)
 
->  拆解芯片读取固件
+> 拆解芯片读取固件
 
 拆解芯片所使用的硬件工具：热风焊台，恒温内热烙铁（尖头，刀头），吸锡带，吸锡器，助焊剂，松香，镊子，锡丝，隔热胶带等，在拆解芯片时记得提前在芯片引脚涂上助焊剂。
 
@@ -201,5 +196,3 @@ UART引脚作用
 向客服索取
 
 在很多设备的官网都会有客服咨询入口，当我们找不到想要的固件的时候，可以向客服索取，当然客服可能会向你要设备的SN码，为了验证你确实是有设备。当你向其索要的时候，注意你的表达方式，基本上都能够获取到固件。
-
-
