--- a/GuideTutorial/9-安全论文.md
+++ b/GuideTutorial/9-安全论文.md
@@ -16,6 +16,7 @@
 | KARONTE: Detecting Insecure Multi-binary Interactions in Embedded Firmware | 2020 |                  多二进制文件自动化静态分析                  |
 |  POSTER_A_Multi-phased_Multi-faceted_IoT_Honeypot_Ecosystem  | 2020 |                      多阶段IOT设备蜜罐                       |
 | Android SmartTVs Vulnerability Discovery via Log-Guided Fuzzing | 2021 |                       漏洞 / 缺陷挖掘                        |
+| Rust for Embedded Systems: Current State, Challenges and Open Problems | 2023 |                       嵌入式系统的 Rust：现状、挑战和未解决的问题                        |
 |                                                              |      |                                                              |
 
 
